render/tests/snapshots/golden_scenarios__scenario@snap_orange_step1.snap
---
source: render/tests/golden_scenarios.rs
expression: render(sc)
---
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
                RRRRRRRRRRRRRRRR
