render/tests/snapshots/golden_scenarios__scenario@snap_ready_orb.snap
---
source: render/tests/golden_scenarios.rs
expression: render(sc)
---
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
              GGGG              
            GGGGGGGG            
           GGG    GGG           
           GG      GG           
          GG        GG          
          GG        GG          
          GG        GG          
          GG        GG          
           GG      GG           
           GGG    GGG           
            GGGGGGGG            
              GGGG
