render/tests/snapshots/golden_scenarios__scenario@snap_sector_band_all_three.snap
---
source: render/tests/golden_scenarios.rs
expression: render(sc)
---
.                              .
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
                                
YYYYYYYYYY YYYYYYYYYY YYYYYYYYYY
YYYYYYYYYY YYYYYYYYYY YYYYYYYYYY
