render/tests/snapshots/golden_scenarios__scenario@snap_yellow_double_wave.snap
---
source: render/tests/golden_scenarios.rs
expression: render(sc)
---
YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY 
YYYYYYYYYYYYYYYYYYYYYYYYYYYYYY  
YYYYYYYYYYYYYYYYYYYYYYYYYYYYY   
YYYYYYYYYYYYYYYYYYYYYYYYYYYY    
YYYYYYYYYYYYYYYYYYYYYYYYYYY     
YYYYYYYYYYYYYYYYYYYYYYYYYY      
YYYYYYYYYYYYYYYYYYYYYYYYY       
YYYYYYYYYYYYYYYYYYYYYYYY        
YYYYYYYYYYYYYYYYYYYYYYY         
YYYYYYYYYYYYYYYYYYYYYY          
YYYYYYYYYYYYYYYYYYYYY           
YYYYYYYYYYYYYYYYYYYY            
YYYYYYYYYYYYYYYYYYY             
YYYYYYYYYYYYYYYYYY              
YYYYYYYYYYYYYYYYY               
YYYYYYYYYYYYYYYY                
YYYYYYYYYYYYYYY                 
YYYYYYYYYYYYYY                  
YYYYYYYYYYYYY                   
YYYYYYYYYYYY                    
YYYYYYYYYYY                     
YYYYYYYYYY                      
YYYYYYYYY                       
YYYYYYYY                        
YYYYYYY                         
YYYYYY                          
YYYYY                           
YYYY                            
YYY                             
YY                              
Y
