render/tests/snapshots/golden_scenarios__scenario@yellow_double_wave_alt_phase.snap
---
source: render/tests/golden_scenarios.rs
expression: render(sc)
---
                                
                               Y
                              YY
                             YYY
                            YYYY
                           YYYYY
                          YYYYYY
                         YYYYYYY
                        YYYYYYYY
                       YYYYYYYYY
                      YYYYYYYYYY
                     YYYYYYYYYYY
                    YYYYYYYYYYYY
                   YYYYYYYYYYYYY
                  YYYYYYYYYYYYYY
                 YYYYYYYYYYYYYYY
                YYYYYYYYYYYYYYYY
               YYYYYYYYYYYYYYYYY
              YYYYYYYYYYYYYYYYYY
             YYYYYYYYYYYYYYYYYYY
            YYYYYYYYYYYYYYYYYYYY
           YYYYYYYYYYYYYYYYYYYYY
          YYYYYYYYYYYYYYYYYYYYYY
         YYYYYYYYYYYYYYYYYYYYYYY
        YYYYYYYYYYYYYYYYYYYYYYYY
       YYYYYYYYYYYYYYYYYYYYYYYYY
      YYYYYYYYYYYYYYYYYYYYYYYYYY
     YYYYYYYYYYYYYYYYYYYYYYYYYYY
    YYYYYYYYYYYYYYYYYYYYYYYYYYYY
   YYYYYYYYYYYYYYYYYYYYYYYYYYYYY
  YYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
